--- a/front page/Intro.css
+++ b/front page/Intro.css
@@ -7,9 +7,33 @@ body{
     margin: 10%;
 }
 .container{
-    position: relative; width:768px;   max-width: 100%; min-height: 480px;
+    position: relative; width:768px;   max-width: 100%; min-height: 480px; 
     background: #fff;   border-radius: 10px;    overflow: hidden;   box-shadow: 0 14px 28px lightgray,0 10px lightgrey;
 }
+.auth{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center;    /* Center vertically */  
+   
+    padding:5px;
+    margin-bottom: 0px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  .fa:hover {
+    opacity: 0.9; background-color: black;
+  }
+h1{
+    margin: 20px;  text-align: center;
+    
+}
+
 
 .sign-up, .sign-in{
     position: absolute; top: 0; left: 0;    height: 100%;   transition: all 0.6s ease-in-out;
@@ -22,8 +46,14 @@ body{
     width:50%;  z-index: 2;
 }
 form{
-    background: #fff;   display: flex;  align-items: center;    justify-content: center;
-    flex-direction: column; padding: 0 50px;    height: 100%; text-align: center;
+    background: #fff;   
+    display: flex;  
+    align-items: center;    
+    justify-content: center;
+    flex-direction: column; 
+    padding: 0 50px;    
+    height: auto; /* Allow height to adjust based on content */
+    text-align: center;
 }
 h1{font-weight: bold;}
 p{font-size:14px;   font-weight: 100;   line-height: 20px;  letter-spacing: 1.5px;   margin: 15px 0 20px;}
