--- a/display page/main.css
+++ b/display page/main.css
@@ -5,12 +5,12 @@ body {
     background-color: #f4f4f4;
 }
 .container {
-    width: 70%; /* Adjust width as needed */
+    width: 60%; /* Adjust width as needed */
     margin: 0 auto;
     padding: 20px;
     background: linear-gradient(to right,#13B3AC,aquamarine);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
 }
 .row {
     display: flex;           
@@ -19,18 +19,54 @@ body {
     align-items: center;         /* Center vertically */
     padding: 20px;
     margin: 10px 0;
+    flex-direction: row;
+    padding: 10px;
   
 }
-.row.column {
-    flex-direction: column;      /* Stack items vertically for this specific row */
-    align-items: center;         /* Center horizontally */
+.row1 {
+    display: flex;           
+       /* Use flexbox for alignment */
+      justify-content: space-between;    /* Center vertically */
+    padding: 20px;
+    margin: 10px 0;
+    flex-direction: row;
+    padding: 10px;
+  
 }
+.row1>.column {
+    flex-direction: column;      /* Stack items vertically for this specific row */
+    margin:10px;
+    padding: 10px;   
+    text-align: left;     /* Center horizontally */
+}
+.row1>.column1 {
+    flex-direction: column;      /* Stack items vertically for this specific row */
+    margin:10px;
+    padding: 10px;  
+    text-align: right;      /* Center horizontally */
+}
+
 input[type="text"] {
     width: 40%;                 /* Set the width of the input */
     margin: 10px;        /* Optional: Set a maximum width */
     padding: 10px;             /* Add some padding */
-    border: 1px solid #ccc;    /* Border for the input */
-    border-radius: 5px;        /* Rounded corners */
+
+    border: 2px solid #ccc; /* Border color */
+    border-radius: 25px;  
+}
+.search_button{
+    border: 2px solid #ccc; /* Border color */
+    border-radius: 50%; /* Circular shape */
+    padding: 8px; /* Increased padding */
+    background-color: #f9f9f9; /* Light background color */
+    cursor: pointer; /* Pointer cursor on hover */
+    transition: background-color 0.3s, transform 0.2s; /* Smooth transition effects */
+   
+    width: 40px; /* Fixed width */
+    height: 40px; /* Fixed height */
+}
+#weather-icon{
+    font-size:200px;
 }
 .fa {
     height:30px; width:20px;
@@ -41,9 +77,19 @@ input[type="text"] {
     font-size:60px;
     margin: 5px;
 }
-.sun-icon{
-color: orange;
-}
+
 .fa-tint{
 color: darkblue;
 }
+.fa-flag{
+    font-size: 65px;
+    margin: 10px;
+}
+h1{
+    font-size: 40px; color:aliceblue;
+    text-align: center;
+}
+.fa-cloud{color: #f4f4f4;}
+.fa-sun{color: orange;}
+.fa-cloud-showers-heavy{color: black;}
+.fa-smog{color: gray;}
