--- a/front page/Intro.css
+++ b/front page/Intro.css
@@ -2,13 +2,13 @@
 box-sizing: border-box;
 }
 body{
-    align-items: center;    display: flex;  justify-content: center;
-    flex-direction: column; background: gainsboro;  min-height: 100%;
+    align-items: center;    display: flex;  justify-content: center; align-items: center;
+    flex-direction: column; background: rgb(243, 240, 240);  min-height: 100%;
     margin: 10%;
 }
 .container{
-    position: relative; width:768px;   max-width: 100%; min-height: 480px;
-    background: #fff;   border-radius: 10px;    overflow: hidden;   box-shadow: 0 14px 28px lightgray,0 10px lightgrey;
+    position: relative; width:768px;   max-width: 100%; min-height: 480px; align-items: center;
+    background: #ccc5c5e0;   border-radius: 10px;    overflow: hidden;   box-shadow:0 34px 40px rgba(0, 0, 0, 0.5);
 }
 
 .sign-up, .sign-in{
@@ -94,4 +94,32 @@ button:active{
     justify-content: center;    align-items: center;   border: 1px solid #ccc; 
 }
 
+h1{
+    text-align: center;
+    background: linear-gradient(to right, #111184,  #ADD8E6); /* Gradient colors */
+    background-clip: text;
+   
+    color: transparent; /* Make the text color transparent */
+    font-size: 55px;
+}
+.spinner {
+    /* font-size: 100px; Adjust size as needed */
+    background: linear-gradient(to right,#13B3AC,aquamarine);/* Gradient colors */
+    align-items: center;
+    background-clip: text; /* Standard property */
+    color: transparent; /* Make the text color transparent */
+    /* animation: spin 1.5s linear infinite; Animation properties */
+    font-size: 100px;
+    animation: spin 1.5s linear infinite;
+}
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
 
+p{
+    text-align: center;
+}
+.spin{
+    display: flex; justify-content: center;
+}
